Added: Tube class with basic functions and first Tube test.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Gradle
 .gradle/
 build/
+out/
 
 # IntelliJ
 .idea/
@@ -15,3 +16,10 @@ Thumbs.db
 
 # Logs
 *.log
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
