Added: time limit methods

--- a/task2-file-service/build.gradle
+++ b/task2-file-service/build.gradle
@@ -16,3 +16,8 @@ dependencies {
 application {
     mainClass = 'com.example.fileservice.Main'
 }
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
