--- a/task3-weather-service/build.gradle
+++ b/task3-weather-service/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     implementation 'org.json:json:20230227'
+    implementation 'redis.clients:jedis:4.4.3'
 }
 
 application {
