Update: project structure files are updated

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,5 @@ org.gradle.configuration-cache=true
 org.gradle.parallel=true
 org.gradle.caching=true
 
+org.gradle.java.home=/opt/homebrew/Cellar/openjdk@21/21.0.10/libexec/openjdk.jdk/Contents/Home
+
